# gallery-dl

./: GUIDE.md  README.md  pyproject.toml  pyrightconfig.json  setup.py
gallery_dl/: __init__.py  option.py  output.py
