[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gallery-dl"
version = "0.1.0"
authors = [{ name = "gallery-dl" }]
description = "gallery-dl"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.11.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0"
]